2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02529]
	* configure (ask_choice): fix bugs
	* configure (include_opt): disable as much as if baby model
	* configure: ask/def parameter after model selected

	* fm.h (use_mark): runtime option use_mark
	* main.c (_mark): ditto
	* main.c (cmd_mark): ditto
	* main.c (nextMk): ditto
	* main.c (prevMk): ditto
	* main.c (reMk): ditto
	* rc.c (CMT_USE_MARK): ditto
	* rc.c (params3): ditto
	
	* fm.h (nextpage_topline): runtime option nextpage_topline
	* etc.c (lineSkip): ditto
	* main.c (nscroll): ditto
	* rc.c (CMT_NEXTPAGE_TOPLINE): ditto
	* rc.c (params3): ditto
	
	* fm.h (label_topline): runtime option label_topline
	* file.c (loadGeneralFile): ditto
	* main.c (loadLink): ditto
	* rc.c (CMT_LABEL_TOPLINE): ditto
	* rc.c (params3): ditto
	
	* fm.h (vi_prec_num): runtime option vi_prec_num
	* main.c (pgFore): ditto
	* main.c (pgBack): ditto
	* rc.c (CMT_VI_PREC_NUM): ditto
	* rc.c (params3): ditto

	* fm.h (emacs_like_lineedit): runtime option emacs_like_lineedit
	* linein.c (inputLineHist): ditto
	* linein.c (_esc): ditto
	* linein.c (next_dcompl): ditto
	* rc.c (CMT_EMACS_LIKE_LINEEDIT): ditto
	* rc.c (params3): ditto

	* fm.h (ftppass_hostnamegen): runtime option ftppass_hostnamegen
	* ftp.c (FtpLogin): ditto
	* rc.c (CMT_FTPPASS_HOSTNAMEGEN): ditto
	* rc.c (params9): ditto
	
2001-11-24  Akihiro Sagawa <sagawa@sohgoh.net>

	* [w3m-dev 02528] RFC2732 URL Patch
	* main.c (chkURL): check RFC2732 style URLs
	* url.c (parseURL): remove RFC2732 address check here, 
	                   move to openSocket()
	* url.c (openSocket): check RFC2732 style hostname
	* url.c (openSocket): check IPv4 address strictly

2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02526]
	* .cvsignore: add inflate mktable w3m w3mbookmark w3mhelperpanel
	   _zdmachdep.c
	* configure: 
	  pref_lang -> lang={JA|EN}
	  dcode -> display_code
	  scode -> system_code
	  remove save_params()