@@ -1,5 +1,10 @@
 2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 02530]
+	* file.c (readHeader): NULL check for domain
+
+2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 02529]
 	* configure (ask_choice): fix bugs
 	* configure (include_opt): disable as much as if baby model
